--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,7 @@
-<h2> Edit Tweet </h2>
-
-<form method="post" action="/tweets/<%=@tweet.id%>">
+<h1>Edit a Tweet</h1>
+<p><%=@tweet.content%></p>
+<form method="POST" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="text" name="content" value="<%=@tweet.content%>">
   <input type="submit" value="submit">
 </form>
