--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,11 @@
-<p><%= @tweet.content %>
+<h1>Welcome, <%= current_user.username %></h1>
+<h1>Users Tweet</h1>
 
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
-</form>
+  <p><%= @tweet.id %></p>
+  <p><%= @tweet.content %></p>
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
+  <input type="submit" name="Delete Tweet" value="Delete Tweet">
+</form>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
