--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,5 @@
-<p> Welcome <%= current_user.username %>
-<h2> Tweets </h2>
+<h1>Welcome, <%= current_user.username %></h1>
 
 <% @tweets.each do |tweet| %>
-  <div>
-    <%= tweet.content %>
-  </div>
+  <%=tweet.content %>
 <% end %>
