--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
-<h1>Login to Fwitter!</h1>
-<form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
+<h1>Login Page</h1>
 
-  <input type="submit" value="submit">
+<form action="/login" method="POST">
+  <input type="text" name="username" value="username:">
+  <input type="password" name="password" value="Password:">
+  <input type="submit" value="Log In" id="submit">
 </form>
